[gd_scene load_steps=6 format=2]

[ext_resource path="res://Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://UI/DayTimeUI.gd" type="Script" id=2]
[ext_resource path="res://UI/SpeedControls.gd" type="Script" id=3]
[ext_resource path="res://Modes.tres" type="DynamicFont" id=4]
[ext_resource path="res://UI/UI.gd" type="Script" id=5]

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
margin_left = 10.0
margin_right = 1024.0
margin_bottom = 38.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stats" type="VBoxContainer" parent="Panel/HBoxContainer"]
margin_right = 60.0
margin_bottom = 38.0
alignment = 1

[node name="PopulationLabel" type="Label" parent="Panel/HBoxContainer/Stats"]
margin_top = 12.0
margin_right = 60.0
margin_bottom = 25.0
custom_fonts/font = ExtResource( 1 )
text = "Population: "

[node name="MainMaterials" type="GridContainer" parent="Panel/HBoxContainer"]
margin_left = 64.0
margin_right = 925.0
margin_bottom = 38.0
size_flags_horizontal = 3
columns = 4

[node name="WoodLabel" type="Label" parent="Panel/HBoxContainer/MainMaterials"]
margin_right = 33.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 1 )
text = "Wood: "

[node name="StoneLabel" type="Label" parent="Panel/HBoxContainer/MainMaterials"]
margin_left = 37.0
margin_right = 73.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 1 )
text = "Stone: "

[node name="WheatLabel" type="Label" parent="Panel/HBoxContainer/MainMaterials"]
margin_left = 77.0
margin_right = 115.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 1 )
text = "Wheat: "

[node name="ArrowsLabel" type="Label" parent="Panel/HBoxContainer/MainMaterials"]
margin_left = 119.0
margin_right = 162.0
margin_bottom = 13.0
custom_fonts/font = ExtResource( 1 )
text = "Arrows: "

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/HBoxContainer"]
margin_left = 929.0
margin_right = 1014.0
margin_bottom = 38.0

[node name="DayTime" type="VBoxContainer" parent="Panel/HBoxContainer/HBoxContainer"]
margin_right = 45.0
margin_bottom = 38.0
size_flags_horizontal = 10
script = ExtResource( 2 )

[node name="Day" type="Label" parent="Panel/HBoxContainer/HBoxContainer/DayTime"]
margin_right = 45.0
margin_bottom = 17.0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "Day 31  "
align = 1
valign = 2

[node name="Time" type="Label" parent="Panel/HBoxContainer/HBoxContainer/DayTime"]
margin_top = 21.0
margin_right = 45.0
margin_bottom = 38.0
grow_horizontal = 2
size_flags_vertical = 3
custom_fonts/font = ExtResource( 1 )
text = "12:09"
align = 1

[node name="SpeedControls" type="GridContainer" parent="Panel/HBoxContainer/HBoxContainer"]
margin_left = 49.0
margin_right = 85.0
margin_bottom = 38.0
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 2
script = ExtResource( 3 )

[node name="Pause" type="Button" parent="Panel/HBoxContainer/HBoxContainer/SpeedControls"]
margin_right = 16.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 1 )
text = "||"

[node name="Slow" type="Button" parent="Panel/HBoxContainer/HBoxContainer/SpeedControls"]
margin_left = 16.0
margin_right = 36.0
margin_bottom = 19.0
custom_fonts/font = ExtResource( 1 )
text = "<"

[node name="Normal" type="Button" parent="Panel/HBoxContainer/HBoxContainer/SpeedControls"]
margin_top = 19.0
margin_right = 16.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 1 )
text = ">"

[node name="Fast" type="Button" parent="Panel/HBoxContainer/HBoxContainer/SpeedControls"]
margin_left = 16.0
margin_top = 19.0
margin_right = 36.0
margin_bottom = 38.0
custom_fonts/font = ExtResource( 1 )
text = ">>"

[node name="RotateMode" type="Label" parent="."]
visible = false
margin_top = 44.0
margin_right = 1024.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 4 )
text = "Rotate Mode"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BuildMode" type="Label" parent="."]
visible = false
margin_top = 44.0
margin_right = 1024.0
margin_bottom = 70.0
custom_fonts/font = ExtResource( 4 )
text = "Build Mode"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Panel/HBoxContainer/HBoxContainer/SpeedControls/Pause" to="Panel/HBoxContainer/HBoxContainer/SpeedControls" method="_on_Pause_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/HBoxContainer/SpeedControls/Slow" to="Panel/HBoxContainer/HBoxContainer/SpeedControls" method="_on_Slow_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/HBoxContainer/SpeedControls/Normal" to="Panel/HBoxContainer/HBoxContainer/SpeedControls" method="_on_Normal_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/HBoxContainer/SpeedControls/Fast" to="Panel/HBoxContainer/HBoxContainer/SpeedControls" method="_on_Fast_pressed"]
